--- a/Devictus/Devictus.vcxproj.filters
+++ b/Devictus/Devictus.vcxproj.filters
@@ -57,12 +57,6 @@
     <None Include="Shaders\light.vert">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Shaders\test.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\test.vert">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\lightblock.vert">
       <Filter>Shaders</Filter>
     </None>
@@ -80,6 +74,15 @@
     </None>
     <None Include="Objects\Block\block.mtl">
       <Filter>Objects\Block</Filter>
+    </None>
+    <None Include="Shaders\text.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\text.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Objects\Player\Earth_Golem_OBJ.mtl">
+      <Filter>Objects\Player</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -131,6 +134,9 @@
     <Image Include="Objects\Block\block.png">
       <Filter>Objects\Block</Filter>
     </Image>
+    <Image Include="Objects\Player\EarthGolem_albedo.jpeg">
+      <Filter>Objects\Player</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\engine.h">
@@ -173,6 +179,9 @@
   <ItemGroup>
     <Object Include="Objects\Block\block.obj">
       <Filter>Objects\Block</Filter>
+    </Object>
+    <Object Include="Objects\Player\Earth_Golem_OBJ.obj">
+      <Filter>Objects\Player</Filter>
     </Object>
   </ItemGroup>
 </Project>
