--- a/Devictus/Devictus.vcxproj.filters
+++ b/Devictus/Devictus.vcxproj.filters
@@ -84,6 +84,12 @@
     <None Include="Objects\Enemy\Earth_Golem_OBJ.mtl">
       <Filter>Objects\Enemy</Filter>
     </None>
+    <None Include="Shaders\aabb.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\aabb.frag">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
