--- a/Devictus/Devictus.vcxproj.filters
+++ b/Devictus/Devictus.vcxproj.filters
@@ -102,6 +102,12 @@
     <None Include="Shaders\projectile.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\debugQuad.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\debugQuad.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -148,6 +154,9 @@
       <Filter>Game</Filter>
     </ClCompile>
     <ClCompile Include="Engine\particle.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\shadow.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
@@ -218,6 +227,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="Engine\particle.h">
+      <Filter>Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\shadow.h">
       <Filter>Engine</Filter>
     </ClInclude>
   </ItemGroup>
