ball collision is added, player manual shooting is added and other small quality of life adds

--- a/Devictus/Devictus.vcxproj
+++ b/Devictus/Devictus.vcxproj
@@ -151,12 +151,10 @@
     <None Include="Shaders\guiQuad.vert" />
     <None Include="Shaders\projectile.frag" />
     <None Include="Shaders\projectile.vert" />
-    <None Include="Shaders\light.frag" />
-    <None Include="Shaders\light.vert" />
     <None Include="Shaders\object.frag" />
     <None Include="Shaders\object.vert" />
-    <None Include="Shaders\particle.frag" />
-    <None Include="Shaders\particle.vert" />
+    <None Include="Shaders\skybox.frag" />
+    <None Include="Shaders\skybox.vert" />
     <None Include="Shaders\text.frag" />
     <None Include="Shaders\text.vert" />
   </ItemGroup>
@@ -200,6 +198,7 @@
     <ClInclude Include="Engine\particle.h" />
     <ClInclude Include="Engine\shader.h" />
     <ClInclude Include="Engine\shadow.h" />
+    <ClInclude Include="Engine\skybox.h" />
     <ClInclude Include="Engine\text.h" />
     <ClInclude Include="Engine\texture.h" />
     <ClInclude Include="Game\camera.h" />
